# SkinningCOR-cpp

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  README.md  area.cpp  area.h  center_of_rotation.cpp  center_of_rotation.h  center_of_rotation_api.cpp  center_of_rotation_api.h  exception_utils.h  export.bat  main.cpp  serialize.cpp  serialize.h  similarity.cpp  similarity.h  viewer.cpp  viewer.h
